topogg replaces the topogr_global

--- a/geoportal/geoportailv3_geoportal/locale/de/LC_MESSAGES/geoportailv3_geoportal-client.po
+++ b/geoportal/geoportailv3_geoportal/locale/de/LC_MESSAGES/geoportailv3_geoportal-client.po
@@ -4063,7 +4063,7 @@ msgid "bglayers"
 msgstr "Hintergrundlayer"
 
 #: l_wmts.529
-msgid "topogr_global"
+msgid "topogg"
 msgstr "Topographische Karte"
 
 #: l_wmts.530
