--- a/geoportal/geoportailv3_geoportal/locale/fr/LC_MESSAGES/geoportailv3_geoportal-client.po
+++ b/geoportal/geoportailv3_geoportal/locale/fr/LC_MESSAGES/geoportailv3_geoportal-client.po
@@ -4064,7 +4064,7 @@ msgid "bglayers"
 msgstr "Arrière-fonds"
 
 #: l_wmts.529
-msgid "topogr_global"
+msgid "topogg"
 msgstr "Carte topographique"
 
 #: l_wmts.530
